# openGL-FPSdemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  light.h  material.h  mesh.h  object.h  shader.h  shape.h  util.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: blackFragShader.fs  floorFragShader.fs  floorVertexShader.vs  fragmentShader.fs  frgshader.fs  lightShader.fs  lightVertexShader.vs  skyFragShader.fs  skyVertexShader.vs  vertexShader.vs
src/: asset.hpp.in  camera.h  main.cpp  mesh.h  model.h  object.h  shader.cpp  shader.h  sky_box.h  texture.h
